--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+research/
 
 # IPython
 profile_default/
@@ -127,6 +128,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+kidney_venv/
 
 # Spyder project settings
 .spyderproject
